Menjan malo izgled

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChangePasswordActivity">
+    tools:context=".ChangePasswordActivity"
+    android:background="@color/beige">
 
     <TextView
         android:id="@+id/changePassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
+        android:textColor="@color/black"
         android:text="Da li želite da promenite Vašu lozinku?"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,15 +20,18 @@
 
     <Button
         android:id="@+id/buttonChange"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="20dp"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/maloBeige"
         android:text="želim"
         app:layout_constraintEnd_toStartOf="@+id/buttonDontChange"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/changePassword" />
+        app:layout_constraintTop_toBottomOf="@+id/changePassword"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
 
     <Button
         android:id="@+id/buttonDontChange"
@@ -34,7 +39,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="96dp"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:text="ne želim"
+        android:backgroundTint="@color/maloBeige"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/changePassword" />
 
