--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="@color/black"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/profile_cover"
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="16dp"
@@ -10,14 +11,15 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profilePicture"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:src="@mipmap/ic_launcher_round" />
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@drawable/profile_user_icon_white" />
 
     <TextView
         android:id="@+id/usrnameNav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:paddingTop="8dp"
         android:text="Username"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
@@ -26,5 +28,6 @@
         android:id="@+id/emailNav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:text="Email" />
 </LinearLayout>
