--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="beige">#FFF7AC</color>
+    <color name="maloBeige">#FFFACD</color>
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#2196F3</color>
     <color name="purple_700">#2196F3</color>
