--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -10,9 +10,9 @@
         android:id="@+id/changePassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="80dp"
         android:text="Da li ste sigurni da želite da obrišete Vaš nalog?"
-
+        android:textColor="@color/black"
         android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,13 +20,12 @@
 
     <Button
         android:id="@+id/buttonDeleteProfile"
-        android:layout_width="73dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="Da"
-        android:background="@drawable/circle_border"
         app:layout_constraintEnd_toStartOf="@+id/buttonDontDeleteProfile"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,13 +33,11 @@
 
     <Button
         android:id="@+id/buttonDontDeleteProfile"
-        android:layout_width="73dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="130dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="108dp"
         android:text="Ne"
-        android:background="@drawable/circle_border"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/changePassword" />
 
