--- a/app/src/main/res/layout/activity_recept_detalj.xml
+++ b/app/src/main/res/layout/activity_recept_detalj.xml
@@ -5,11 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white">
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ReceptDetaljActivity">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbarDetaljRecepta"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/purple_500"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageView
+            android:id="@+id/home_dugme_recept_detalj"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/home_icon"/>
+    </androidx.appcompat.widget.Toolbar>
 
     <ImageView
         android:layout_width="match_parent"
@@ -22,10 +42,55 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:padding="20dp"
+        android:textColor="@color/black"
+        android:text="Naziv:"
+        android:paddingStart="20dp"
+        android:paddingTop="20dp"
+        android:textSize="19sp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:paddingStart="20dp"
+        android:textColor="@color/black"
+        android:textSize="19sp"
+        android:id="@+id/nazivReceptaDetaljan"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Priprema:"
+        android:paddingTop="20dp"
+        android:textColor="@color/black"
+        android:paddingStart="20dp"
+        android:textSize="19sp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:paddingStart="20dp"
+        android:textColor="@color/black"
         android:textSize="19sp"
         android:id="@+id/opisReceptaDetaljan"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/black"
+        android:text="Sastojci:"
+        android:paddingStart="20dp"
+        android:paddingTop="20dp"
+        android:textSize="19sp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:paddingStart="20dp"
+        android:textColor="@color/black"
+        android:textSize="19sp"
+        android:id="@+id/sastojciReceptaDetaljan"/>
 
 </LinearLayout>
 </ScrollView>
