--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -28,7 +28,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/pretragaRecepti"
         android:layout_width="409dp"
-        android:layout_height="601dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="55dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbarDodavanjeRecepata" />
