--- a/app/src/main/res/layout/custom_grid_layout.xml
+++ b/app/src/main/res/layout/custom_grid_layout.xml
@@ -8,8 +8,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewSastojak"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="110dp"
         android:layout_marginTop="10dp"
         android:paddingBottom="10dp"
         app:cardBackgroundColor="#2196F3"
@@ -44,9 +44,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
                 android:gravity="center_horizontal"
                 android:paddingBottom="10dp"
                 android:text="First"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView2" />
