--- a/app/src/main/res/layout/custom_grid_recept_profili.xml
+++ b/app/src/main/res/layout/custom_grid_recept_profili.xml
@@ -84,14 +84,15 @@
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingRight="10dp">
                 <RatingBar
                     android:id="@+id/rating_bar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:numStars="5"
                     android:stepSize="0.5"
-                    android:layout_marginRight="50dp"/>
+                    android:layout_marginRight="47dp"/>
                 <Button
                     android:id="@+id/button_recenzija"
                     android:layout_width="100dp"
@@ -99,7 +100,7 @@
                     android:textAlignment="center"
                     android:text="ocenite"
                     android:backgroundTint="@color/purple_500"
-                    android:layout_marginRight="10dp"/>
+                    android:layout_marginRight="0dp"/>
 
             </LinearLayout>
         </LinearLayout>
