--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -13,6 +13,10 @@
             android:icon="@drawable/profile_user_icon"
             android:title="Vaš profil" />
         <item
+            android:id="@+id/nav_latest"
+            android:icon="@drawable/clock_fast_icon"
+            android:title="Najnoviji recepti" />
+        <item
             android:id="@+id/nav_notifications"
             android:icon="@drawable/notifications_icon"
             android:title="Notifikacije" />
