--- a/app/src/main/res/layout/activity_dodavanje_recepata.xml
+++ b/app/src/main/res/layout/activity_dodavanje_recepata.xml
@@ -62,7 +62,9 @@
         android:textSize="15sp"
         android:ems="10"
         android:hint="Priprema"
-        android:inputType="textPersonName"
+        android:minLines="2"
+        android:maxLines="20"
+        android:scrollbars="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/naziv_recepta" />
@@ -76,7 +78,9 @@
         android:layout_marginEnd="20dp"
         android:ems="10"
         android:hint="Sastojci"
-        android:inputType="textPersonName"
+        android:minLines="2"
+        android:maxLines="20"
+        android:scrollbars="vertical"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
