--- a/app/src/main/res/layout/activity_recept_detalj.xml
+++ b/app/src/main/res/layout/activity_recept_detalj.xml
@@ -97,7 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:textColor="@color/black"
-        android:text="Username korisnika koji je objavio recept:"
+        android:text="Korisničko ime korisnika koji je objavio recept:"
         android:paddingStart="20dp"
         android:paddingTop="20dp"
         android:textSize="19sp"/>
