--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -25,27 +25,35 @@
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
             android:backgroundTint="@color/purple_500"
+
             android:text="želim"
             android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/buttonDontChange"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/changePassword" />
+            app:layout_constraintTop_toBottomOf="@+id/changePassword"
+            app:layout_constraintVertical_bias="0.169" />
 
         <Button
             android:id="@+id/buttonDontChange"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="96dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
             android:backgroundTint="@color/purple_500"
             android:text="ne želim"
             android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/changePassword" />
+            app:layout_constraintStart_toEndOf="@id/buttonChange"
+            app:layout_constraintTop_toBottomOf="@+id/changePassword"
+            app:layout_constraintVertical_bias="0.167" />
 
         <TextView
             android:id="@+id/textViewproba"
