--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -70,26 +70,32 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_marginTop="52dp"
+
+                android:layout_marginLeft="20dp"
+                android:layout_marginBottom="20dp"
                 android:src="@drawable/change_profile_picture_icon"
                 android:text="promeni sliku"
-                android:layout_marginBottom="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.861"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@id/dodaj_recept"
                 app:layout_constraintTop_toBottomOf="@+id/eMail"
-                app:layout_constraintBottom_toBottomOf="parent"></Button>
+                app:layout_constraintVertical_bias="1.0"></Button>
 
             <Button
                 android:id="@+id/dodaj_recept"
                 android:layout_width="155dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="46dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="52dp"
+                android:layout_marginEnd="0dp"
                 android:layout_marginBottom="20dp"
                 android:text="Dodaj recept"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/changeProfilePicture"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/eMail" />
+                app:layout_constraintTop_toBottomOf="@+id/eMail"
+                app:layout_constraintVertical_bias="0.0" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
