--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -34,9 +34,10 @@
             android:id="@+id/pretraziPoSastojcima"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="310dp"
             android:text="Pretrazi"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:paddingRight="10dp"
+            android:layout_gravity="end"/>
 
 
     </androidx.appcompat.widget.Toolbar>
