--- a/app/src/main/res/layout/activity_promena_recepata.xml
+++ b/app/src/main/res/layout/activity_promena_recepata.xml
@@ -103,25 +103,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sastojci" />
 
-    <Button
-        android:id="@+id/prikaziSastojkePromena"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
-        android:text="Prikazi sastojke"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listaSastojakaPromenaRecepta" />
+        <Button
+            android:id="@+id/prikaziSastojkePromena"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="20dp"
+            android:text="Prikazi sastojke"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/promenaRecept"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/listaSastojakaPromenaRecepta" />
 
-    <Button
-        android:id="@+id/promenaRecept"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="30dp"
-        android:text="Promeni recept"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listaSastojakaPromenaRecepta" />
+        <Button
+            android:id="@+id/promenaRecept"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="20dp"
+            android:text="Promeni recept"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/prikaziSastojkePromena"
+            app:layout_constraintTop_toBottomOf="@+id/listaSastojakaPromenaRecepta" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
