--- a/app/src/main/res/layout/custom_grid_recept_profili.xml
+++ b/app/src/main/res/layout/custom_grid_recept_profili.xml
@@ -36,16 +36,16 @@
 
                 <LinearLayout
                     android:id="@+id/prviProfil"
-                    android:layout_width="243dp"
+                    android:layout_width="230dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
                     android:layout_weight="2"
-                    android:layout_marginRight="50dp"
                     android:orientation="vertical"
                     android:padding="10dp">
 
                     <TextView
                         android:id="@+id/nazivReceptaProfil"
-                        android:layout_width="205dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:maxLines="1"
                         android:text="Naziv"
@@ -53,55 +53,71 @@
 
                     <TextView
                         android:id="@+id/opisReceptaProfil"
-                        android:layout_width="203dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:maxLines="1"
                         android:text="Opis recepta"
                         android:textSize="18sp" />
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/prosecna_recenzija"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:maxLines="1"
-                    android:text="ocena"
-                    android:layout_marginLeft="60dp"
-                    android:textColor="@color/white"
-                    android:background="@color/purple_500"
-                    android:textSize="26sp"
-                    android:layout_marginRight="10dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:paddingTop="10dp">
 
-                    android:layout_marginTop="10dp"/>
-            </LinearLayout>
+                    <TextView
+                        android:id="@+id/prosecna_recenzija"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:background="@color/purple_500"
+                        android:maxLines="1"
+                        android:text="ocena"
+                        android:textAlignment="center"
+                        android:textColor="@color/white"
+                        android:textSize="26sp" />
+                </LinearLayout>
 
 
 
             </LinearLayout>
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingRight="10dp">
-                <RatingBar
-                    android:id="@+id/rating_bar"
+                android:paddingRight="0dp">
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:numStars="5"
-                    android:stepSize="0.5"
-                    android:paddingRight="4dp"
-                    android:layout_marginRight="45dp"/>
-                <Button
-                    android:id="@+id/button_recenzija"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:text="ocenite"
-                    android:backgroundTint="@color/purple_500"
-                    android:layout_marginRight="0dp"/>
+                    android:orientation="horizontal">
+
+                    <RatingBar
+                        android:id="@+id/rating_bar"
+                        android:layout_width="240dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="0dp"
+                        android:numStars="5"
+                        android:paddingRight="4dp"
+                        android:stepSize="0.5" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="end"
+                    android:layout_marginLeft="10dp">
+
+                    <Button
+                        android:id="@+id/button_recenzija"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+
+                        android:backgroundTint="@color/purple_500"
+                        android:text="ocenite"
+                        android:textAlignment="center" />
+                </LinearLayout>
 
             </LinearLayout>
         </LinearLayout>
